# hypermedia_systems_learning

./: Dockerfile  docker-compose.yaml  migrations.sql  mypy.ini  pyproject.toml  req.txt
api/: router.py
db/: async_db.py
migrations/: env.py
migrations/versions/: 454a8c9a1c34_changes_on_contact.py  e89377edfbf9_fist_migration.py
models/: base.py  contact.py
repository/: contact.py
settings/: settings.py
static/: main.css
templates/: base.html  contacts.html  new.html
tests/: conftest.py
tests/test_api/: test_api_router.py  test_router.py
tests/test_db/: test_async_db.py
tests/test_repository/: test_contact.py  test_repo_contact.py
tests/test_webapp/: test_webapp_router.py
webapp/: router.py
