[tool.poetry]
name = "contacts"
version = "0.1.0"
description = "Learning Hypermedia Systems"
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "contacts"}]

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "0.108.0"
sqlmodel = "0.0.14"
alembic = "1.13.1"
uvicorn = "^0.25.0"
asyncpg = "^0.29.0"
gunicorn = "21.2.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
jinja2 = "3.1.2"
phonenumbers = "^8.13.27"
python-dotenv = "^1.0.0"
pydantic-extra-types = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pynvim = "0.4.3"
pytest = "7.4.0"
coverage = "7.3.0"
flake8 = "6.1.0"
mypy = "1.5.1"
black = "23.7.0"
pre-commit = "3.3.3"
sqlalchemy-stubs = "^0.4"
pytest-cov = "4.1.0"
pytest-mock = "3.11.1"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
